--- a/package.json
+++ b/package.json
@@ -73,6 +73,8 @@
 		]
 	},
 	"dependencies": {
+		"@bytescale/upload-widget": "^4.25.0",
+		"@bytescale/upload-widget-react": "^4.18.0",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
 		"react-dom": "^16.8.4",
